# FlutLock

./: .gitignore  .pubignore  .pylintrc  CHANGELOG.md  LICENSE  MANIFEST.in  README  README.md  flutlock  pubspec.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sign_flutter_app.py  test_flutlock.py
.dart_tool/: package_config.json  package_config_subset  package_graph.json
config/: README.md  flutlock_config.json  flutlock_config_sample.json  test_config.json
doc/: ARCHITECTURE_PATTERNS.md  IMPLEMENTATION_REPORT.md  POC_VALIDATION_RESULTS.md  TEMPLATE_SYSTEM.md  performance_results.json
docs/: commands.md  configuration.md
example/: README.md  basic_usage.dart  cli_examples.md  pubspec.yaml
examples/: README.md  ci_cd_example.py  ci_example.sh  ci_integration_guide.md  config_file_example.py  custom_signing_config_example.py  existing_keystore_example.bat  legacy_sign_flutter_app.py  optimized_config_example.py  sign_flutter_app.py  sign_flutter_app_example.py
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: flutlock.py
test/: architecture_generator_test.dart  dependency_manager_test.dart  flutter_builder_test.dart  gradle_modifier_test.dart  keystore_test.dart  performance_comparison.dart  project_analyzer_test.dart  project_setup_test.dart  properties_generator_test.dart  signature_verifier_test.dart  template_cli_test.dart  template_engine_test.dart
tests/: README.md  __init__.py  test_cli.py  test_custom_signing_config.py  test_flutlock.py
(+22 files in other folders)
